--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@ h2,
 h3,
 h4,
 h5 {
-  margin: 3rem 0 1.38rem;
+  margin: 2rem 0 1.38rem;
   font-family: var(--headlineFont);
   font-weight: 400;
   line-height: 1.1;
@@ -123,6 +123,18 @@ ul {
   }
 }
 
+.section-title {
+  margin-bottom: 2rem;
+  text-align: center;
+}
+.underline {
+  width: 4rem;
+  height: 0.2rem;
+  margin-bottom: 0.75em;
+  background: var(--highlightColor);
+  margin-left: auto;
+  margin-right: auto;
+}
 /* Loading spinner */
 .loading {
   width: 5rem;
