--- a/src/index.css
+++ b/src/index.css
@@ -136,6 +136,10 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
+
+.page {
+  min-height: calc(100vh - (20vh + 10rem));
+}
 /* Loading spinner */
 .loading {
   width: 5rem;
