--- a/src/index.css
+++ b/src/index.css
@@ -117,6 +117,10 @@ ul {
   max-width: var(--maxWidth);
 }
 
+.active {
+  color: var(--highlightColor);
+}
+
 @media screen and (min-width: 990px) {
   .section-center {
     width: 95vw;
