update colors dark-theme

--- a/src/index.css
+++ b/src/index.css
@@ -58,8 +58,8 @@ html {
   --cardBackground: #4a4e69;
   --textColor: #f2e9e4;
   --headlineColor: #c9ada7;
-  --secondaryColor: #9a8c98;
-  --highlightColor: #f8a7dc;
+  --secondaryColor: #423c41;
+  --highlightColor: #8a5b79;
 }
 
 /* Global Styles */
