--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ html {
   --textColor: #f2e9e4;
   --headlineColor: #c9ada7;
   --secondaryColor: #423c41;
-  --highlightColor: #8a5b79;
+  --highlightColor: #facde9;
 }
 
 /* Global Styles */
