--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@ html {
 .light-theme {
   --backgroundColor: #fffffe;
   --cardBackground: #faeee7;
-  --textColor: #594a4e;
+  --textColor: #3c3134;
   --headlineColor: #33272a;
   --secondaryColor: #ffc6c7;
   --highlightColor: #ff8ba7;
